--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
             <div class="text">Description de la troisième image</div>
         </div>
 
+        <!-- Diapositive 3 -->
+        <div class="slide fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="https://picsum.photos/id/102/700/400" style="width:100%">
+            <div class="text">Description de la quatrième image</div>
+        </div>
+
         <!-- Boutons de navigation -->
         <a id="prev">&#10094;</a>
         <a id="next">&#10095;</a>
@@ -39,6 +46,7 @@
 
     <!-- Points de navigation (dots) -->
     <div style="text-align:center">
+        <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
